# fastapi-otp-authentication

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.yml
examples/: basic_usage.py  mongodb_usage.py  sqlalchemy_usage.py
fastapi_otp_authentication/: __init__.py  config.py  dependencies.py  router.py  schemas.py  security.py  types.py
fastapi_otp_authentication/db/: __init__.py  adapter.py  models.py  protocols.py
fastapi_otp_authentication/db/mongodb/: adapter.py  models.py
fastapi_otp_authentication/db/sqlalchemy/: adapter.py  models.py  types.py
tests/: conftest.py  test_config.py  test_database.py  test_mongo_adapter.py  test_router.py  test_security.py
