[project]
name = "fastapi-otp-authentication"
version = "0.1.1"
description = "A flexible, type-safe library for adding OTP-based authentication to FastAPI applications"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["fastapi", "otp", "authentication", "jwt", "security"]

dependencies = [
    "fastapi>=0.115.0",
    "greenlet>=3.3.1",
    "pydantic[email]>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
sqlalchemy = [
    "sqlalchemy>=2.0.0",
]
mongodb = [
    "motor>=3.0.0",
    "pymongo>=4.0.0",
]
all = [
    "sqlalchemy>=2.0.0",
    "motor>=3.0.0",
    "pymongo>=4.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aiosqlite>=0.20.0",
    "mongomock-motor>=0.0.30",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "types-python-jose>=3.3.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_otp_authentication"]
include = ["fastapi_otp_authentication/py.typed"]

[tool.mypy]
strict = true
python_version = "3.12"
disallow_untyped_defs = true
disallow_any_unimported = false
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
disallow_untyped_calls = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "A", "C4", "DTZ", "T10", "ISC", "ICN", "PIE", "PYI", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PLE", "PLW", "TRY", "RUF"]
ignore = [
    "B008",    # Do not perform function calls in argument defaults (FastAPI uses Depends())
    "TRY003",  # Allow long error messages in exceptions (better for user clarity)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ARG002",  # Unused method arguments are common in pytest fixtures
    "ANN001",  # Missing type annotations acceptable in tests
    "ANN201",  # Missing return type annotations acceptable in test fixtures
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.128.0",
    "mongomock-motor>=0.0.30",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.0",
    "motor>=3.0.0",
    "pymongo>=4.0.0",
    "uvicorn>=0.40.0",
    "mypy>=1.11.0",
    "types-python-jose>=3.5.0.20250531",
]
